--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@hookform/resolvers": "^2.8.5",
         "@types/jest": "24.0.17",
         "@types/node": "12.7.2",
-        "@types/react": "16.9.2",
-        "@types/react-dom": "16.8.5",
-        "react": "^16.9.0",
-        "react-dom": "^16.9.0",
+        "@types/react": "17.0.38",
+        "@types/react-dom": "17.0.11",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-hook-form": "^7.22.5",
         "react-scripts": "3.1.1",
-        "typescript": "4.5.4"
+        "typescript": "4.5.4",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "npm run tailwind:css && react-scripts start",
