--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "private": true,
     "dependencies": {
         "@hookform/resolvers": "^2.8.5",
-        "@types/jest": "24.0.17",
-        "@types/node": "12.7.2",
+        "@types/jest": "27.4.0",
+        "@types/node": "17.0.8",
         "@types/react": "17.0.38",
         "@types/react-dom": "17.0.11",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.22.5",
-        "react-scripts": "3.1.1",
+        "react-scripts": "^5.0.0",
         "typescript": "4.5.4",
         "yup": "^0.32.11"
     },
@@ -38,6 +38,6 @@
         ]
     },
     "devDependencies": {
-        "tailwindcss": "^1.1.2"
+        "tailwindcss": "^3.0.12"
     }
 }
